--- a/.github/workflows/tiru.yml
+++ b/.github/workflows/tiru.yml
@@ -7,9 +7,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@main
     - name: Bump version and push tag
-      uses: anothrNick/github-tag-action@master
+      uses: anothrNick/github-tag-action@main
       env:
         GITHUB_TOKEN: ${{ secrets.TAG_TOKEN }}
         REPO_OWNER: devibadampudi
