--- a/.github/workflows/tiru.yml
+++ b/.github/workflows/tiru.yml
@@ -19,5 +19,5 @@ jobs:
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@v1.5
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
