--- a/.github/workflows/tiru.yml
+++ b/.github/workflows/tiru.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         # Disabling shallow clone is recommended for improving relevancy of reporting
-        fetch-depth: 0
+        fetch-depth: '0'
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@v1.5
       env:
