--- a/.github/workflows/tiru.yml
+++ b/.github/workflows/tiru.yml
@@ -4,9 +4,8 @@ on:
   # a pull request.
   push:
     branches:
-      - main
-  pull_request:
-      types: [opened, synchronize, reopened]
+      - saiteja
+
 
 jobs:
   sonarcloud:
